k8s/prod/20-backend-deploy.yaml
#############################################
# RMIT University Vietnam
# Course: COSC2767|COSC2805 Systems Deployment and Operations
# Semester: 2025B
# Assessment: Assignment 2
# Author: Bui Viet Anh
# ID: s3988393
# Created  date: 14/09/2025
# Last modified: 18/09/2025
# Acknowledgement: None
#############################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-blue
  namespace: prod
  labels: { app: backend, version: blue }
spec:
  replicas: 1
  selector: { matchLabels: { app: backend, version: blue } }
  template:
    metadata:
      labels: { app: backend, version: blue }
    spec:
      containers:
      - name: backend
        image: __IMAGE__   # will be updated by Jenkins 'set image'
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
